src/Editor.css
.editor {
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: rgba(152, 181, 236, 0.1);
}
.editor .tab-bar {
  background-color: #eee;
  height: 40px;
  display: flex;
  overflow-x: auto;
  position: relative;
}
.editor .tab-bar::-webkit-scrollbar {
  display: none;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.editor .tab-bar div {
  padding: 10px;
  padding-right: 20px;
  width: 100px;
  overflow: hidden;
  text-overflow: ellipsis;
  background-color: rgb(157, 178, 216, 0.3);
  flex-shrink: 0;
  position: relative;
  border-right: solid 1px #777;
  user-select: none;
  cursor: pointer;
}
.editor .tab-bar div img {
  width: 20px;
  position: absolute;
  right: 3px;
  top: 50%;
  transform: translateY(-50%);
}
.editor input {
  font-size: 28px;
  border: none;
  border-top: solid 1px #777;
  outline: none;
  padding: 8px;
}
.editor textarea {
  resize: none;
  width: 100%;
  padding: 8px;
  border: none;
  outline: none;
  height: calc(100% - 40px);
  border-top: solid 1px #777;
  font-size: 18px;
  position: relative;
}

.editor .tab-bar .active-scroll-area {
  position: fixed;
  height: inherit;
  width: 20px;
  z-index: 1;
}

.editor .tab-bar .active-scroll-area:last-of-type {
  right: 0;
}
.editor .tab-bar .active-scroll-area:nth-of-type(3) {
  right: 20px;
}

.tab-bar i {
  height: 36.5px;
  width: 20px;
  position: fixed;
}
.editor .tab-bar .current-tab {
  background-color: #eee;
}

.scrolling-right > .scroll-effect {
  right: 0;
  background: linear-gradient(to left, rgba(100, 148, 237, 0.7), transparent);
}
.scrolling-left > .scroll-effect {
  background: linear-gradient(to right, rgba(100, 148, 237, 0.7), transparent);
}

.save-button {
  width: 65px;
  padding: 12px;
  font-size: 18px;
  font-weight: bold;
  background-color: rgb(82, 120, 192);
  color: beige;
  text-align: center;
  position: absolute;
  right: 14px;
  bottom: 14px;
  border-radius: 6px;
  border: none;
  outline: none;
  cursor: pointer;
}

